# deck_builder

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  play.ipynb  pyproject.toml
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  prestart.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6b5e9fc83c15_add_collection_table.py  a63a5fd79ce9_add_card_model_and_cache.py  b73e9561f393_add_legalities_to_card.py  d5a4a4b6cea5_initial_schema_setup.py  d8163c4049fb_add_produced_mana_field.py
backend/app/: initial_data.py  main.py
backend/app/ai/: README.md  agents.py  rag.py  tools.py  types.py
backend/app/ai/agents/: __init__.py  rules.py
backend/app/ai/agents/core/: base.py
backend/app/ai/agents/rules/: __init__.py  rules_agent.py
backend/app/ai/agents/tools/: rules.py
backend/app/ai/ingestion/: base.py  chroma_setup.py  rules_ingestion.py
backend/app/ai/rag/: base.py  rules.py
backend/app/ai/tools/: rules.py  scryfall.py
backend/app/ai/vector_store/: base.py  chroma.py  embedding.py
backend/app/api/: api.py  deps.py
backend/app/api/routes/: ai.py  auth.py  cards.py  collection.py  decks.py  users.py
backend/app/core/: config.py  db.py  logging.py
backend/app/models/: __init__.py  card.py  collection.py  deck.py  user.py
backend/app/schemas/: ai.py  collection.py
backend/app/services/: scryfall.py  stats.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_ai.py  test_boards.py  test_cards.py  test_decks.py  test_stats.py  (+2 more)
backend/scripts/: dev.sh  format.sh  ingest_rules.py  lint.sh  test.sh  test_agent_logging.py  test_rules_agent.py  test_rules_embedding.sh
backend/tests/: test_ingestion_abcs.py  test_rules_ingestion.py
(+63 files in other folders)
