[project]
name = "mtg-deck-builder-monorepo"
version = "0.1.0"
description = "Monorepo for MTG Deck Builder"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.1",
    "greenlet>=3.3.0",
    "sqlmodel>=0.0.31",
]

[tool.uv.workspace]
members = ["backend"]

[tool.pyright]
extraPaths = ["backend"]

[tool.mypy]
mypy_path = "backend"
