[project]
name = "mtg-deck-builder-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.25",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.1",
    "greenlet>=3.0.3",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "google-genai>=0.3.0",
    "google-adk>=0.1.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "einops>=0.7.0",
    "aiohttp>=3.9.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
